fixed footer overlapping content

--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ footer {
   width: 100%;
   bottom: 0;
   left: 0;
-  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,6 +44,7 @@ footer {
   font-weight: bold;
   font-family: "pixel";
   font-size: 1.1em;
+  margin-top: 2%;
 }
 
 footer a {
@@ -77,6 +77,7 @@ footer a:hover {
   display: flex;
   gap: 10px;
   flex-direction: column;
+  flex: 1;
   align-items: center;
   justify-content: center;
 }
